Modify supported data type.